# Asm2Mach

./: CMakeLists.txt  sampleinputs.asm
.github/workflows/: c-cpp.yml
Asm2Mach/: test.md
data/: test.asm
include/: utils.h
src/: main.c
